[gd_scene load_steps=2 format=3 uid="uid://cibhiffatxe8h"]

[ext_resource type="Script" path="res://UI/level_select.gd" id="1_aslab"]

[node name="level_select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aslab")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelOne" type="Button" parent="."]
layout_mode = 1
offset_left = 64.0
offset_top = 16.0
offset_right = 192.0
offset_bottom = 144.0
scale = Vector2(0.997725, 1)
text = "LEVEL ONE"

[node name="LevelTwo" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.0222222
anchor_right = 0.0125
anchor_bottom = 0.00277778
offset_left = 256.0
offset_top = 24.0
offset_right = 376.0
offset_bottom = 144.0
scale = Vector2(1, 0.992558)
text = "LEVEL TWO"
metadata/_edit_use_anchors_ = true

[node name="LevelThree" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 16.0
offset_right = 576.0
offset_bottom = 144.0
text = "LEVEL THREE"

[node name="LevelFour" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 193.0
offset_bottom = 312.0
scale = Vector2(0.995563, 1)
text = "LEVEL FOUR"

[node name="LevelFive" type="Button" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 192.0
offset_right = 384.0
offset_bottom = 312.0
text = "LEVEL FIVE"

[node name="LevelFiveBronze" type="Label" parent="LevelFive"]
visible = false
layout_mode = 0
offset_left = 39.0
offset_top = 79.0
offset_right = 93.0
offset_bottom = 102.0
text = "bronze"

[node name="LevelFiveSilver" type="Label" parent="LevelFive"]
visible = false
layout_mode = 0
offset_left = 39.0
offset_top = 79.0
offset_right = 93.0
offset_bottom = 102.0
text = "silver"

[node name="LevelFiveGold" type="Label" parent="LevelFive"]
visible = false
layout_mode = 0
offset_left = 39.0
offset_top = 79.0
offset_right = 93.0
offset_bottom = 102.0
text = "gold"

[node name="Level6" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 192.0
offset_right = 576.0
offset_bottom = 312.0
text = "LEVEL SIX"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 320.0
offset_right = 154.0
offset_bottom = 351.0
text = "BACK"

[connection signal="pressed" from="LevelOne" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="LevelTwo" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="LevelThree" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="LevelFour" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="LevelFive" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Level6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
